# Transhot

./: .gitignore  README.md  build_windows.bat  main.py  pyproject.toml  requirements.txt
config/: settings.example.json
src/transhot/: app.py  gui.py  image_renderer.py  models.py  ocr.py  output_paths.py  processing_logger.py  processor.py  settings.py  translator.py  zip_processor.py
