[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transhot"
version = "0.1.0"
description = "OCR image translation MVP GUI for Windows"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7.0",
    "Pillow>=10.0.0",
    "easyocr>=1.7.1",
    "openai>=1.40.0",
    "numpy>=1.26.0",
    "pyinstaller>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
